trees and forests

--- a/2-Selection/2-Selection.ipynb
+++ b/2-Selection/2-Selection.ipynb
@@ -54,6 +54,7 @@
    "cell_type": "markdown",
    "id": "89290fd9-4b32-43f7-a00a-e8931b182fcb",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -495,12 +496,12 @@
    "source": [
     "n_folds = 10\n",
     "\n",
-    "# Créer un objet KFold qui permettra de cross-valider en 10 folds\n",
+    "# Créer un objet KFold qui permettra de cross-valider en n_folds folds\n",
     "kf = model_selection.KFold(n_splits=n_folds,  \n",
     "                           shuffle=True # mélanger les échantillons avant de créer les folds\n",
     "                          )\n",
     "\n",
-    "# Utiliser kf pour partager le jeu d'entraînement en 5 folds. \n",
+    "# Utiliser kf pour partager le jeu d'entraînement en n_folds folds. \n",
     "# kf.split retourne un iterateur (consommé après une boucle).\n",
     "# Pour pouvoir se servir plusieurs fois des mêmes folds, nous transformons cet itérateur en liste d'indices :\n",
     "kf_indices = list(kf.split(X_train))"
@@ -601,12 +602,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30c95457-372a-41e5-85bc-2aa68d3bdf7b",
+   "metadata": {},
+   "source": [
+    "Nous allons aussi utiliser la [commande magique time](https://ipython.readthedocs.io/en/stable/interactive/magics.html) pour mesurer le temps de calcul d'une cellule de notre notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2f71de2-cc02-4cb7-b6a2-0dc4fc89ca0b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "# Utilisation de cet objet sur les données d'entraînement (centrées-réduites)\n",
     "grid.fit(X_train_scaled, y_train)"
    ]
@@ -647,9 +657,9 @@
     "mean_test_score = grid.cv_results_['mean_test_score']\n",
     "stde_test_score = grid.cv_results_['std_test_score'] / np.sqrt(n_folds) # standard error\n",
     "\n",
-    "plt.plot(k_values, mean_test_score)\n",
-    "plt.plot(k_values, (mean_test_score + stde_test_score), '--', color='steelblue')\n",
-    "plt.plot(k_values, (mean_test_score - stde_test_score), '--', color='steelblue')\n",
+    "p = plt.plot(k_values, mean_test_score)\n",
+    "plt.plot(k_values, (mean_test_score + stde_test_score), '--', color=p[0].get_color())\n",
+    "plt.plot(k_values, (mean_test_score - stde_test_score), '--', color=p[0].get_color())\n",
     "plt.fill_between(k_values, (mean_test_score + stde_test_score), \n",
     "                 (mean_test_score - stde_test_score), alpha=0.2)\n",
     "\n",
@@ -889,6 +899,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "f1_per_c = [] # pour enregistrer les valeurs du score F1 pour chacune des 50 valeurs de C\n",
     "weights_per_c = [] # pour enregistrer les coefficients associés à chaque variable,  \n",
     "                   # pour les 50 valeurs de C\n",
@@ -929,9 +941,10 @@
     "mean_test_score = np.mean(np.array(f1_per_c), axis=1)\n",
     "stde_test_score = np.std(np.array(f1_per_c), axis=1) / np.sqrt(n_folds) # standard error\n",
     "\n",
-    "plt.plot(c_values, mean_test_score)\n",
-    "plt.plot(c_values, (mean_test_score + stde_test_score), '--', color='steelblue')\n",
-    "plt.plot(c_values, (mean_test_score - stde_test_score), '--', color='steelblue')\n",
+    "p = plt.plot(c_values, mean_test_score)\n",
+    "plt.plot(c_values, (mean_test_score + stde_test_score), '--', \n",
+    "         color=p[0].get_color()) # réutiliser la même couleur que précédemment au lieu d'avancer\n",
+    "plt.plot(c_values, (mean_test_score - stde_test_score), '--', color=p[0].get_color())\n",
     "plt.fill_between(c_values, (mean_test_score + stde_test_score), \n",
     "                 (mean_test_score - stde_test_score), alpha=0.2)\n",
     "\n",
