added attributions to contributors

--- a/1-Intro/1-Intro.ipynb
+++ b/1-Intro/1-Intro.ipynb
@@ -13,6 +13,8 @@
    "id": "3fd19f49-8ede-4b4f-b0f0-2f4afc8a2e79",
    "metadata": {},
    "source": [
+    "Notebook préparé par [Chloé-Agathe Azencott](http://cazencott.info).\n",
+    "\n",
     "Ce notebook vous permettra de découvrir des fonctionalités de `scikit-learn` permettant :\n",
     "* d'entrainer et évaluer un algorithme d'apprentissage supervisé\n",
     "* d'encoder des variables qualitatives ;\n",
