--- a/2-Selection/2-Selection.ipynb
+++ b/2-Selection/2-Selection.ipynb
@@ -13,6 +13,8 @@
    "id": "a81dc7fc-a115-4b26-b03c-b10f9db63e87",
    "metadata": {},
    "source": [
+    "Notebook préparé par [Chloé-Agathe Azencott](http://cazencott.info) avec l'aide d'[Arthur Imbert](https://github.com/Henley13).\n",
+    "\n",
     "Dans ce notebook il s'agit\n",
     "* d'évaluer un modèle sur un jeu de test\n",
     "* de choisir la valeur d'un hyperparamètre d'un algorithme d'apprentissage\n",
