--- a/3-Arbres/3-Arbres.ipynb
+++ b/3-Arbres/3-Arbres.ipynb
@@ -13,6 +13,8 @@
    "id": "d0d477a2-f382-47c2-ac6d-ee069ac3a4c7",
    "metadata": {},
    "source": [
+    "Notebook préparé par [Chloé-Agathe Azencott](http://cazencott.info).\n",
+    "\n",
     "Dans ce notebook il s'agit de découvrir les arbres de décision et les méthodes ensemblistes (forêts aléatoires, boosting de gradient)."
    ]
   },
