--- a/2-Selection/2-Selection.ipynb
+++ b/2-Selection/2-Selection.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "02f0923b-321e-48ed-8f56-c8829f996dcf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Notebook 2 : Sélection et évaluation de modèles"
    ]
@@ -56,7 +58,6 @@
    "cell_type": "markdown",
    "id": "89290fd9-4b32-43f7-a00a-e8931b182fcb",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
