apres commentaires en classe

--- a/1-Intro/1-Intro.ipynb
+++ b/1-Intro/1-Intro.ipynb
@@ -94,13 +94,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fad3627-1c2d-4852-9c8f-5b14f2322f23",
+   "metadata": {},
+   "source": [
+    "__Alternativement :__ Si vous avez besoin de télécharger le fichier (par exemple sur colab) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63693f34-6955-4a87-b5c2-4dab5d4b7c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/1-Intro/data/auto-mpg.tsv\n",
+    "\n",
+    "df = pd.read_csv(\"auto-mpg.tsv\", delimiter='\\t')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "731fb74c-c0b2-452a-944b-afece07d2b6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
@@ -129,6 +149,26 @@
    "outputs": [],
    "source": [
     "y = np.array(df['mpg'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97487328-a440-48c0-99a9-e065af55f242",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c435ce0-0dbe-43da-a04c-68f63bfdf32c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.shape"
    ]
   },
   {
@@ -330,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026a1d9c-4f39-484c-9b58-2c58bfdf5b7e",
+   "id": "f979615f-15de-4305-ba48-5b054d39dfb3",
    "metadata": {},
    "source": [
     "### Performance\n",
@@ -345,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a85151-6726-4716-abd3-00b802a19593",
+   "id": "9bbb9ef8-2c93-4a3f-9eab-f433239fe583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,11 +395,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bafd62b-9655-4ac3-bb8d-4c9750e75b10",
+   "id": "43f57e8a-36b0-4958-b4b1-fd7a409e1011",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\"RMSE: %.2f\" % metrics.mean_squared_error(y, y_pred, squared=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50245ac1-99ef-4a07-86d8-cf00a0ad73ad",
+   "metadata": {},
+   "source": [
+    "Alternativement (selon version de scikit-learn) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30367f4e-415b-42ab-b358-577828f46055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"RMSE: %.2f\" % np.sqrt(metrics.mean_squared_error(y, y_pred)))"
    ]
   },
   {
@@ -652,6 +710,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56ed1443-cefa-4f19-b40b-ab14f8b163b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(5, 5))\n",
+    "plt.scatter(y_pred_scaled, y_pred)\n",
+    "\n",
+    "plt.xlabel(\"Consommation prédite sur les données centrées-réduites (mpg)\")\n",
+    "plt.ylabel(\"Consommation prédite (mpg)\")\n",
+    "plt.title(\"Régression linéaire\")\n",
+    "\n",
+    "# Mêmes valeurs sur les deux axes\n",
+    "axis_min = np.min([np.min(y), np.min(y_pred)])-1\n",
+    "axis_max = np.max([np.max(y), np.max(y_pred)])+1\n",
+    "plt.xlim(axis_min, axis_max)\n",
+    "plt.ylim(axis_min, axis_max)\n",
+    "  \n",
+    "# Diagonale y=x\n",
+    "plt.plot([axis_min, axis_max], [axis_min, axis_max], 'k-')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "39402c2c-831e-4074-9eba-072445d26cfd",
    "metadata": {},
@@ -677,6 +759,26 @@
     "tmp = plt.xticks(range(num_features), feature_names, rotation=90)\n",
     "tmp = plt.ylabel('Coefficient')\n",
     "plt.legend(loc=(0.02, 0.75))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5b5cd9-c3c4-4688-9b96-1b4f2d5a7f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9377fcb7-41b8-4842-a3b4-627058655803",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor_scaled.intercept_"
    ]
   },
   {
@@ -906,7 +1008,7 @@
    "source": [
     "# Afficher, pour chaque variable, la valeur absolue de son coefficient dans le modèle\n",
     "num_features = X.shape[1]\n",
-    "plt.scatter(range(num_features), np.abs(predictor.coef_), label='Original')\n",
+    "plt.scatter(range(num_features), np.abs(predictor_scaled.coef_), label='Centrées-réduites')\n",
     "\n",
     "num_features2 = X_dummies.shape[1]\n",
     "plt.scatter(range(num_features2), np.abs(predictor_dummy.coef_), label='Avec one-hot', marker='v')\n",
@@ -918,6 +1020,14 @@
     "\n",
     "plt.legend(loc=(0.02, 0.75))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c671092-82fd-4126-8408-61bcb86829bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
