apres traitement en classe

--- a/2-Selection/2-Selection.ipynb
+++ b/2-Selection/2-Selection.ipynb
@@ -90,6 +90,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f2fc4f1-8c83-40a0-8f98-fba5f3076025",
+   "metadata": {},
+   "source": [
+    "__Alternativement :__ Si vous avez besoin de télécharger le fichier (par exemple sur colab) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0044c30f-5e93-4d2f-b128-8ebaf565406b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/2-Selection/data/winequality-white.csv\n",
+    "\n",
+    "df = pd.read_csv('winequality-white.csv', # nom du fichier\n",
+    "                   sep=\";\" # séparateur de colonnes\n",
+    "                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f56d09e8-9975-484a-ae22-b1bddd5ad2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('winequality-white.csv', # nom du fichier\n",
+    "                   sep=\";\" # séparateur de colonnes\n",
+    "                   )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1408ceb0-dd45-41c2-a4fb-2173528c564e",
    "metadata": {},
    "source": [
@@ -414,6 +448,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcca4916-e143-4fe3-afde-b906b04315e1",
+   "metadata": {},
+   "source": [
+    "Version alternative (ancienne version de scikit-learn) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a204a1-a9b9-4713-8f56-4d7df5f79196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# metrics.plot_confusion_matrix(model_knn, X_test_scaled, y_test)\n",
+    "# ou (version encore plus ancienne)\n",
+    "metrics.confusion_matrix(y_test, y_pred_knn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56b6b8f-296f-4ae4-9f10-2316a4c175df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(metrics.confusion_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "798a72bc-8cf4-4b15-a541-a0102c7417a0",
    "metadata": {},
    "source": [
@@ -469,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# neighbors.KNeighborsClassifier?"
+    "neighbors.KNeighborsClassifier?"
    ]
   },
   {
@@ -726,6 +790,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d1de824d-e7f9-45bb-8eed-08037f40bdf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(metrics.confusion_matrix(y_test, y_pred_knn_opt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd05235-ea87-4ce4-b76d-6b7263808b1b",
+   "metadata": {},
+   "source": [
+    "Version alternative (ancienne version de scikit-learn) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "706a0aaa-b61a-4ced-9174-6e940ff21e85",
    "metadata": {
     "tags": []
@@ -787,6 +869,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb3556d5-5d50-47dd-a866-fe0d705a157e",
+   "metadata": {},
+   "source": [
+    "Alternativement (anciennes versions de scikit-learn) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa33b76-0be5-4b3a-bbc2-1b17d6cfe343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer un modèle de régression linéaire \n",
+    "model_rlog = linear_model.LogisticRegression(penalty='l2', C=1e6 # modèle non régularisé pour l'instant\n",
+    "                                            )\n",
+    "\n",
+    "# Entraîner ce modèle sur (X_train_scaled, y_train)\n",
+    "model_rlog.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "eff556dd-1b34-4d5e-a05c-e957611fc699",
@@ -805,6 +910,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(y_test, y_pred_rlog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da3ea8c-af4f-4e1b-beac-c282b1bccfc4",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a78d4050-adee-407f-9595-7c94f508adc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(y_test, y_pred_rlog)"
    ]
   },
   {
@@ -1049,7 +1172,7 @@
    "id": "facd955b-63d8-4300-9f6d-6ecd877a2893",
    "metadata": {},
    "source": [
-    "__Question :__ Comment les coefficients du modèle évoluent-t-ils en fonction de la quantité de régularisation ?"
+    "__Question :__ Comment les coefficients du modèle évoluent-ils en fonction de la quantité de régularisation ?"
    ]
   },
   {
@@ -1292,7 +1415,7 @@
    "outputs": [],
    "source": [
     "# calcul des puissances de x, jusqu'au degré 15\n",
-    "polynomial_features = preprocessing.PolynomialFeatures(degree=15, include_bias=False)\n",
+    "polynomial_features = preprocessing.PolynomialFeatures(degree=15)#, include_bias=False)\n",
     "\n",
     "# création des jeux de données correspondants\n",
     "X_train_poly = polynomial_features.fit_transform(X_train)\n",
@@ -1389,7 +1512,8 @@
     "plt.ylabel(\"y\")\n",
     "plt.title(\"Régression polynomiale\")\n",
     "plt.legend(loc=\"best\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.ylim([-6, 6])"
    ]
   },
   {
@@ -1427,7 +1551,8 @@
     "\n",
     "# Étiqueter les axes\n",
     "tmp = plt.xlabel('Variable', fontsize=14)\n",
-    "tmp = plt.ylabel('Coefficient', fontsize=14)"
+    "tmp = plt.ylabel('Coefficient', fontsize=14)\n",
+    "plt.yscale(\"log\")"
    ]
   },
   {
@@ -1573,6 +1698,134 @@
    "source": [
     "__Question :__ Que remarquez-vous maintenant ? Quel est l'effet de la régularisation sur les coefficients du modèle ?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90fb92ff-7f08-45d7-bfcd-46a97cfe08f7",
+   "metadata": {},
+   "source": [
+    "### Régression polynomiale régularisée lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a6f23b8-a979-4c2b-939e-367a59f7d806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entrainement\n",
+    "lasso_poly = linear_model.Lasso(alpha=0.01, random_state=13)\n",
+    "lasso_poly.fit(X_train_poly, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c62924-0d2a-435b-9b42-486073b6acf3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829a8df7-9a1a-4bb0-8752-bc2f60591a32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RMSE \n",
+    "print(\"RMSE d'une régression polynomiale régularisée :\")\n",
+    "# Sur le jeu d'entrainement\n",
+    "rmse_lasso_poly_train = metrics.mean_squared_error(y_train, lasso_poly.predict(X_train_poly), squared=False)\n",
+    "print(\"\\r train: {0:0.2f}\".format(rmse_lasso_poly_train))\n",
+    "# Sur le jeu de test\n",
+    "rmse_lasso_poly_test = metrics.mean_squared_error(y_test, lasso_poly.predict(X_test_poly), squared=False)\n",
+    "print(\"\\r test: {0:0.2f}\".format(rmse_lasso_poly_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21dc3965-c3e2-414e-bccd-4856de4944d8",
+   "metadata": {},
+   "source": [
+    "Nous allons maintenant afficher le modèle appris sur le graphe précédent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d24bdd9-7bdc-4cef-b324-295cdf811f93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dessiner le vrai modèle\n",
+    "plt.plot(X_ground_truth, y_ground_truth, label=\"Vrai modèle\", linewidth=2)\n",
+    "\n",
+    "# Afficher le modèle appris\n",
+    "plt.plot(X_ground_truth, lasso_poly.predict(X_ground_truth_poly), label=\"Modèle appris\", linewidth=2)\n",
+    "\n",
+    "# Afficher les données simulées\n",
+    "plt.scatter(X_train, y_train, label=\"Données simulées (train)\", marker=\"o\")\n",
+    "plt.scatter(X_test, y_test, label=\"Données simulées (test)\", marker=\"D\")\n",
+    "\n",
+    "# format plot\n",
+    "plt.xlabel(\"X\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.title(\"Régression polynomiale régularisée l1\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54c3aa76-cc69-44de-9125-c1e6556309a6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Coefficients du modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14cc1dea-1c18-4396-b7f1-a1329d3f479b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculer le nombre de variables\n",
+    "num_features = X_train_poly.shape[1]\n",
+    "\n",
+    "# Afficher pour chaque variable son coefficient dans le modèle\n",
+    "plt.scatter(range(num_features), # en abcisse : indices des variables\n",
+    "            lasso_poly.coef_ # en ordonnées : leur poids dans le modèle\n",
+    "           )\n",
+    "\n",
+    "# Étiqueter les axes\n",
+    "tmp = plt.xlabel('Variable', fontsize=14)\n",
+    "tmp = plt.ylabel('Coefficient', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eceb8fb4-bb40-49f9-9301-72b657997f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso_poly.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a982f6ee-6943-4368-aac7-558aab6d31c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
