alternative confusion matrix

--- a/3-Arbres/3-Arbres.ipynb
+++ b/3-Arbres/3-Arbres.ipynb
@@ -106,6 +106,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5d0908e-3bd9-4642-b95f-693ff441ad6b",
+   "metadata": {},
+   "source": [
+    "__Alternativement :__ Si vous avez besoin de télécharger le fichier (par exemple sur colab) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fc19fc9-619d-499e-b1f2-a679b51b25ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/3-Arbres/data/mushrooms.csv\n",
+    "\n",
+    "df = pd.read_csv(\"mushrooms.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f09b2f2-1b98-479d-9157-7240bddd8b5e",
@@ -1435,6 +1455,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a031f9ef-1c92-4b25-b5fb-cca3c163cd6a",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468e9630-a9fd-4553-ba72-48f24adc6161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(y_test, y_pred)"
    ]
   },
   {
