--- a/4-SVM/4-SVM.ipynb
+++ b/4-SVM/4-SVM.ipynb
@@ -85,6 +85,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d1cbda5-d533-41e1-9c37-713a730a20f9",
+   "metadata": {},
+   "source": [
+    "__Alternativement :__ Si vous avez besoin de télécharger le fichier (par exemple sur colab) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1298927f-449b-4922-bf70-0246226f805d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/4-SVM/data/penguins_data.csv\n",
+    "\n",
+    "palmerpenguins = pd.read_csv(\"penguins_data.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6ac4bcab-c017-46a9-b74c-9f4ac21baa07",
@@ -458,10 +478,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "337b6d25-9c26-4640-be32-4dba129b6c30",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(labels, model_svc.predict(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c145800-b2e9-41dd-9e3a-6a7b71f588cd",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08cfd6c9-0165-425e-848e-e07808fee7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc.predict(data))"
    ]
   },
   {
@@ -609,6 +649,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(labels, model_svc_01.predict(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6647bf3-610b-4e96-97f6-a8cdc75b59da",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f68dee1a-d993-404c-8515-3fd776d0a629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc_01.predict(data))"
    ]
   },
   {
@@ -909,6 +967,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ef6a9e9-dd99-4964-bd41-624bf12f2fe5",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acb2392-3d00-4bce-92b7-102e19acdef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc.predict(data_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e7d9bca-089a-43d5-905d-51afdf851f3b",
    "metadata": {},
    "source": [
@@ -1053,6 +1129,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(labels, model_svc_01.predict(data_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7320f83c-1715-4f94-aa10-143af141da53",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1adef50-8334-4657-a099-423481e2940e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc_01.predict(data_scaled))"
    ]
   },
   {
@@ -1365,6 +1459,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df5bfe85-ddd0-46a6-a034-15961f8e3b98",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c4357d-1996-4c3d-9bb0-8cc957a5ee94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc.predict(data_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3653c2fc-c4b1-4c8f-a666-7d4c53c345ad",
    "metadata": {},
    "source": [
@@ -1565,6 +1677,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(labels, model_svc_rbf.predict(data_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d813d9cb-7da6-4bdf-b3e1-aee38a474db8",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a4320f-fbe2-4859-a719-96c8915047ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(labels, model_svc_rbf.predict(data_scaled))"
    ]
   },
   {
@@ -1986,6 +2116,24 @@
    "outputs": [],
    "source": [
     "metrics.ConfusionMatrixDisplay.from_predictions(y_test, svc_best.predict(X_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15350a20-ad00-45e5-89b2-6a645efeb61d",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f381c434-25c3-4edc-8d91-b9d5a7131afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(y_test, svc_best.predict(X_test_scaled))"
    ]
   },
   {
