last version after class

--- a/3-Arbres/3-Arbres.ipynb
+++ b/3-Arbres/3-Arbres.ipynb
@@ -610,8 +610,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(15, 10))\n",
-    "tree.plot_tree(model_tree_best, fontsize=6)\n",
+    "fig = plt.figure(figsize=(25, 20))\n",
+    "tree.plot_tree(model_tree_best, fontsize=12)\n",
     "plt.show()"
    ]
   },
@@ -813,7 +813,7 @@
    "id": "786f8648-b9e7-41eb-a70f-eb287285dd93",
    "metadata": {},
    "source": [
-    "### Validation croisée du nombre d'arbres et de la profondeur maximal de chacun d'entre eux.\n",
+    "### Validation croisée du nombre d'arbres et de la profondeur maximale de chacun d'entre eux.\n",
     "\n",
     "Nous allons maintenant considérer deux hyperparamètres, la profondeur maximale de chaque arbre (`max_depth`), et le nombre d'arbres dans la forêt (`n_estimators`). "
    ]
@@ -1108,7 +1108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_values = np.array([10, 20, 50, 100, 200, 500])"
+    "n_values = np.array([10, 20, 50, 100, 200])"
    ]
   },
   {
@@ -1118,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_values = np.array([3, 4, 7, 10])"
+    "d_values = np.array([3, 4, 7])"
    ]
   },
   {
@@ -1137,7 +1137,7 @@
    "outputs": [],
    "source": [
     "# Instanciation d'un objet GridSearchCV\n",
-    "grid_boost = model_selection.GridSearchCV(ensemble.GradientBoostingClassifier(max_depth=1), # prédicteur à évaluer\n",
+    "grid_boost = model_selection.GridSearchCV(ensemble.GradientBoostingClassifier(), # prédicteur à évaluer\n",
     "                                       {'max_depth' : d_values, 'n_estimators': n_values}, # dictionnaire de valeurs d'hyperparamètres\n",
     "                                       cv=kf_indices, # validation croisée à utiliser\n",
     "                                       scoring='f1' # métrique d'évaluation de la performance\n",
@@ -1325,7 +1325,7 @@
     "rf_importances_max = np.max(rf_importances)\n",
     "rf_importances = (rf_importances-rf_importances_min)/(rf_importances_max-rf_importances_min)\n",
     "\n",
-    "# Afficher les importances de l'arbre de décision\n",
+    "# Afficher les importances de la forêt\n",
     "plt.bar((np.arange(num_features)+0.4),  rf_importances,\n",
     "           label=\"Forêt aléatoire\", width=0.2)\n",
     "\n",
@@ -1336,8 +1336,8 @@
     "boost_importances_max = np.max(boost_importances)\n",
     "boost_importances = (boost_importances-boost_importances_min)/(boost_importances_max-boost_importances_min)\n",
     "\n",
-    "# Afficher les importances de l'arbre de décision\n",
-    "plt.bar((np.arange(num_features)+0.6),  rf_importances,\n",
+    "# Afficher les importances du boosting\n",
+    "plt.bar((np.arange(num_features)+0.6),  boost_importances,\n",
     "           label=\"Boosting\", width=0.2)\n",
     "\n",
     "# Légende\n",
@@ -1395,7 +1395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_model = # TODO : insérez ici le nom du modèle que vous avez choisi.\n",
+    "my_model = model_rf_best # TODO : insérez ici le nom du modèle que vous avez choisi.\n",
     "\n",
     "# Prédire sur le jeu de test\n",
     "y_pred = my_model.predict(X_test)"
@@ -1559,7 +1559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_fpr = 0.02\n",
+    "max_fpr = 0.01\n",
     "max_index_where_fpr_acceptable = np.where(fpr <= max_fpr)[0][-1]\n",
     "max_tpr = tpr[max_index_where_fpr_acceptable]\n",
     "print(\"Le taux de vrais positifs correspondant à un taux de faux positifs n'excédant pas %.f %% est de %.f %%\" % ((100*max_fpr), (100*max_tpr)))\n",
